# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  current_performance.txt  debug.sh  profile.sh  valgrind.sh
docs/: README.txt
docs/file-formats/: import.txt
include/: Bitmap.h  Bitmap.hpp  Camera.hpp  Chunk.hpp  Client.hpp  Engine.hpp  GLErrors.hpp  InputHandler.hpp  Material.hpp  Player.hpp  Quad.hpp  QuadContainer.hpp  Renderer.hpp  Shader.hpp  TextureArray.hpp  Vertex.hpp  WindowManager.hpp  World.hpp  common.hpp
include/windows/: windows_unistd.h
saves/: first.world
shaders/: basic.frag  basic.vert  blur.frag  hdrBloomMerge.frag  hdrBloomMerge.vert  highlight.frag  highlight.vert  lighting.frag  lighting.vert
src/: Client.cpp  Engine.cpp  GLErrors.cpp  InputHandler.cpp  Player.cpp  Renderer.cpp  Shader.cpp  TextureArray.cpp  WindowManager.cpp  World.cpp  common.cpp  main.cpp
src/windows/: windows_unistd.cpp
